<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TapGame</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mainTitle">Tap Game</string>
    <string name="mainButton">PLAY</string>
    <string name="instructionsButton">INSTRUCTIONS</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="bigButton">START</string>
    <string name="score">Score: 0</string>
    <string name="highScore">High Score: 0</string>
    <string name="instructionText">Tap the big button as many times as you can in 10 seconds!</string>
    <string name="instructionTitle">Instructions</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_high_score">HighScoreActivity</string>
    <string name="scoreBoardText">High Scores</string>
    <string name="returnButton">RETURN TO MENU</string>
    <string name="newHighScore">New High Score!</string>
    <string name="highScoreInstructions">Enter your name into the leaderboard!</string>
    <string name="highScoreButton">HIGH SCORES</string>
    <string name="nameField">Enter name here</string>
    <string name="name1">aaa </string>
    <string name="score1">0 </string>
    <string name="name2">aaa </string>
    <string name="score2">0 </string>
    <string name="name3">aaa </string>
    <string name="score3">0 </string>
    <string name="name4">aaa </string>
    <string name="score4">0 </string>
    <string name="name5">aaa </string>
    <string name="score5">0 </string>

</resources>
