<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp" >

    <TextView
        android:id="@+id/scoreBoardText"
        android:text="@string/scoreBoardText"
        android:textSize="20pt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/name1"
        android:text="@string/name1"
        android:textSize="15pt"
        android:layout_below="@id/scoreBoardText"
        android:layout_marginTop="30dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/score1"
        android:text="@string/score1"
        android:textSize="15pt"
        android:layout_below="@id/scoreBoardText"
        android:layout_toRightOf="@id/name1"
        android:gravity="right"
        android:layout_marginTop="30dp"
        android:layout_width="120dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/name2"
        android:text="@string/name2"
        android:textSize="15pt"
        android:layout_below="@id/name1"
        android:layout_marginTop="30dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/score2"
        android:text="@string/score2"
        android:textSize="15pt"
        android:layout_below="@id/score1"
        android:layout_toRightOf="@id/name2"
        android:gravity="right"
        android:layout_marginTop="30dp"
        android:layout_width="120dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/name3"
        android:text="@string/name3"
        android:textSize="15pt"
        android:layout_below="@id/name2"
        android:layout_marginTop="30dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/score3"
        android:text="@string/score3"
        android:textSize="15pt"
        android:layout_below="@id/score2"
        android:layout_toRightOf="@id/name3"
        android:gravity="right"
        android:layout_marginTop="30dp"
        android:layout_width="120dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/name4"
        android:text="@string/name4"
        android:textSize="15pt"
        android:layout_below="@id/name3"
        android:layout_marginTop="30dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/score4"
        android:text="@string/score4"
        android:textSize="15pt"
        android:layout_below="@id/score3"
        android:layout_toRightOf="@id/name4"
        android:gravity="right"
        android:layout_marginTop="30dp"
        android:layout_width="120dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/name5"
        android:text="@string/name5"
        android:textSize="15pt"
        android:layout_below="@id/name4"
        android:layout_marginTop="30dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/score5"
        android:text="@string/score5"
        android:textSize="15pt"
        android:layout_below="@id/score4"
        android:layout_toRightOf="@id/name5"
        android:gravity="right"
        android:layout_marginTop="30dp"
        android:layout_width="120dp"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/returnButton"
        android:text="@string/returnButton"
        android:layout_centerHorizontal="true"
        android:textSize="8pt"
        android:layout_below="@id/name5"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>



