<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/newHighScore"
        android:text="@string/newHighScore"
        android:paddingTop="10pt"
        android:textSize="20pt"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/highScoreInstructions"
        android:text="@string/highScoreInstructions"
        android:paddingTop="5pt"
        android:textSize="9pt"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/nameField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameField"
        android:inputType="text"
        />

</LinearLayout>
