<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingPrefix"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainTitle"
        android:textSize="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/icon"
        android:layout_gravity="center"
        android:layout_width="300px"
        android:layout_height="300px"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/mainButton"
        android:text="@string/mainButton"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:padding="20dp"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/instructionsButton"
        android:text="@string/instructionsButton"
        android:padding="20dp"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/highScoreButton"
        android:text="@string/highScoreButton"
        android:padding="20dp"
        android:layout_margin="0dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
